[project]
name = "periodo-server"
description = "A web server for serving and accepting patches for PeriodO data"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["periodo", "periodization", "linked-data"]
authors = [
  {name = "Ryan Shaw", email = "ryanshaw@unc.edu"},
  {name = "Patrick Golden", email = "ptgolden@email.unc.edu"},
]

[project.urls]
homepage = "https://perio.do/"
repository = "https://github.com/periodo/periodo-server"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pyright]
venv = "venv"
venvPath = "."
pythonVersion = "3.10"
